--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.3+5
+version: 1.2.0+12
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
@@ -42,7 +42,6 @@ dependencies:
   flutter_email_sender: ^5.1.0
   sqflite: any
   draggable_scrollbar: ^0.1.0
-  #  audioplayers: ^0.20.1
   audioplayer: ^0.8.1
   firebase_remote_config: ^2.0.2
   package_info: ^2.0.2
@@ -50,7 +49,8 @@ dependencies:
   clipboard: ^0.1.3
   firebase_analytics: ^9.3.3
   firebase_core: ^1.21.1
-  google_mobile_ads: ^2.0.1
+  google_mobile_ads: ^2.3.0
+  in_app_update: ^4.0.1
 
 
 dev_dependencies:
@@ -58,7 +58,6 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: any
-  #  flutter_launcher_icons: 0.7.3
   flutter_native_splash: ^2.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
